gccida/c2/find_dummy_reload
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/reload.c:2296:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/reload.c:2297:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode outmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/reload.c:2298:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class class_0, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/reload.c:2310:4: error: expected ';' after expression
rtx v19; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/reload.c:2310:5: error: use of undeclared identifier 'v19'
rtx v19; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/reload.c:2319:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v28; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/reload.c:2326:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v35; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/reload.c:2328:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v38; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/reload.c:2337:4: error: expected ';' after expression
rtx v47; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/reload.c:2337:5: error: use of undeclared identifier 'v47'
rtx v47; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/reload.c:2338:4: error: expected ';' after expression
rtx v48; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/reload.c:2338:5: error: use of undeclared identifier 'v48'
rtx v48; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/reload.c:2343:4: error: expected ';' after expression
rtx v54; // [rsp+10h] [rbp-78h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/reload.c:2343:5: error: use of undeclared identifier 'v54'
rtx v54; // [rsp+10h] [rbp-78h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/reload.c:2344:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v56; // [rsp+24h] [rbp-64h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/reload.c:2369:1: error: use of undeclared identifier 'v19'
v19 = real_out; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/reload.c:2372:7: error: use of undeclared identifier 'v19'; did you mean 'v14'?
rtx = v19->fld[0].rtx; 
      ^~~
      v14
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/reload.c:2305:5: note: 'v14' declared here
rtx v14; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/reload.c:2380:39: error: use of undeclared identifier 'machine_mode'
v17 += subreg_regno_offset( rtuint, ( machine_mode)BYTE2( v20), *( _DWORD *)&v19[1], ( machine_mode)BYTE2( v15)); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/reload.c:2380:78: error: use of undeclared identifier 'v19'; did you mean 'v14'?
v17 += subreg_regno_offset( rtuint, ( machine_mode)BYTE2( v20), *( _DWORD *)&v19[1], ( machine_mode)BYTE2( v15)); 
                                                                             ^~~
                                                                             v14
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/reload.c:2305:5: note: 'v14' declared here
rtx v14; // r13 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_dummy_reload/src/obj/reload.o] Error 1
